# PowerGridPlus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
db/: docker-compose.yml
powergrid/: __init__.py  anomalies.py  cli.py  data_gen.py  export_gold.py  load.py  pipeline.py  transform.py
