[project]
name = "Power_Grid"
version = "0.1.0"
description = "Smart Energy ETL + Real-Time Anomaly Detection Pipeline with Power BI Analytics"
authors = [
    { name = "Aneesh AJ" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "pandas",
    "numpy",
    "sqlalchemy",
    "psycopg2-binary",
    "pyarrow",
    "fastparquet",
]

[project.scripts]
powergrid = "powergrid.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
